--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -5,49 +5,29 @@
     <span class="brand-tagline">치유의 정원</span>
   </span> -->
 </a>
-<section class="hero-slideshow">
-  <div class="embla">
-    <div class="embla__viewport">
-      <div class="embla__container">
-        <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 1">
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 2">
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 3">
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 4">
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 5">
-        </div>
-      </div>
+<section class="hero-slideshow hero-slideshow--video">
+  <div class="hero-video__container">
+    <div class="intro-hero parallax" data-video>
+      <video class="intro-video" preload="auto" playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
+        <source src="./assets/video/gasirim.mp4" type="video/mp4">
+        비디오를 재생할 수 없는 환경입니다.
+      </video>
+      <button class="intro-video-play" type="button" aria-label="영상 재생">
+        <span aria-hidden="true"></span>
+      </button>
     </div>
-    <div class="embla__overlay">
+    <div class="embla__overlay hero-video__overlay">
       <div class="embla__copy">
         <h1>제주가 품은 정원, 마음을 여는 공간</h1>
         <p><span class="text-variable">제주 민간 4호 정원, 가시림</span></p>
       </div>
-      <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
-        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
-        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
-        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원</a></p>
-      </div>
-      <div class="embla__controls">
-        <button class="embla__prev" aria-label="Previous slide">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z"/></svg>
-        </button>
-        <button class="embla__next" aria-label="Next slide">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
-        </button>
-      </div>
+      <ul class="hero-video__list">
+        <li><a href="/gasirim.github.io/">오름 정원</a></li>
+        <li><a href="/gasirim.github.io/">메타세쿼이어 숲</a></li>
+        <li><a href="/gasirim.github.io/">팜파스그라스 길</a></li>
+        <li><a href="/gasirim.github.io/">곶자왈</a></li>
+        <li><a href="/gasirim.github.io/">수국 정원</a></li>
+      </ul>
     </div>
   </div>
 </section>
-<script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
-<script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
