--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -16,18 +16,11 @@
         <span aria-hidden="true"></span>
       </button>
     </div>
-    <div class="embla__overlay hero-video__overlay">
+    <div class="embla__overlay">
       <div class="embla__copy">
         <h1>제주가 품은 정원, 마음을 여는 공간</h1>
         <p><span class="text-variable">제주 민간 4호 정원, 가시림</span></p>
       </div>
-      <ul class="hero-video__list">
-        <li><a href="/gasirim.github.io/">오름 정원</a></li>
-        <li><a href="/gasirim.github.io/">메타세쿼이어 숲</a></li>
-        <li><a href="/gasirim.github.io/">팜파스그라스 길</a></li>
-        <li><a href="/gasirim.github.io/">곶자왈</a></li>
-        <li><a href="/gasirim.github.io/">수국 정원</a></li>
-      </ul>
     </div>
   </div>
 </section>
