--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -15,25 +15,25 @@
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         <a href="소개.html">소개</a>
         <ul class="nav-sub" role="menu" aria-label="소개 하위 메뉴">
-          <li role="menuitem"><a href="공간소개.html">공간 소개</a></li>
-          <li role="menuitem"><a href="수목원지도.html">수목원 지도</a></li>
-          <li role="menuitem"><a href="둘러보기.html">둘러보기</a></li>
+          <li role="menuitem"><a href="소개.html#공간소개">공간 소개</a></li>
+          <li role="menuitem"><a href="소개.html#수목원지도">수목원 지도</a></li>
+          <li role="menuitem"><a href="소개.html#둘러보기">둘러보기</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
-        방문
+        <a href="방문.html">방문</a>
         <ul class="nav-sub" role="menu" aria-label="방문 하위 메뉴">
-          <li role="menuitem"><a href="이용안내.html">이용 안내</a></li>
-          <li role="menuitem"><a href="오시는길.html">오시는 길</a></li>
-          <li role="menuitem"><a href="단체문의.html">단체 문의</a></li>
+          <li role="menuitem"><a href="방문.html">이용 안내</a></li>
+          <li role="menuitem"><a href="방문.html">오시는 길</a></li>
+          <li role="menuitem"><a href="방문.html">단체 문의</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
-        프로그램
+        <a href="프로그램.html">프로그램</a>
         <ul class="nav-sub" role="menu" aria-label="프로그램 하위 메뉴">
-          <li role="menuitem"><a href="산책명상.html">산책명상</a></li>
-          <li role="menuitem"><a href="명상.html">명상</a></li>
-          <li role="menuitem"><a href="원예.html">원예</a></li>
+          <li role="menuitem"><a href="프로그램.html">산책명상</a></li>
+          <li role="menuitem"><a href="프로그램.html">명상</a></li>
+          <li role="menuitem"><a href="프로그램.html">원예</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0"><a href="shop.html">Shop</a></li>
