--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -23,9 +23,9 @@
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         <a href="방문.html">방문</a>
         <ul class="nav-sub" role="menu" aria-label="방문 하위 메뉴">
-          <li role="menuitem"><a href="방문.html">이용 안내</a></li>
-          <li role="menuitem"><a href="방문.html">오시는 길</a></li>
-          <li role="menuitem"><a href="방문.html">단체 문의</a></li>
+          <li role="menuitem"><a href="방문.html#이용안내">이용 안내</a></li>
+          <li role="menuitem"><a href="방문.html#오시는길">오시는 길</a></li>
+          <li role="menuitem"><a href="방문.html#단체문의">단체 문의</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
